--- a/supercharged-overpass/quiz.html
+++ b/supercharged-overpass/quiz.html
@@ -146,14 +146,14 @@
             <p class="subtitle">Test your knowledge of OpenStreetMap tags and features</p>
             
             <div class="box" style="text-align: left; margin: 2rem 0;">
-              <h3 class="title is-5">📚 Quiz Topics:</h3>
+              <h3 class="title is-5">📚 Quiz Features:</h3>
               <ul>
                 <li><strong>Tag Recognition:</strong> Identify correct OSM tags for features</li>
-                <li><strong>Regional Features:</strong> Learn country-specific patterns</li>
-                <li><strong>Value Matching:</strong> Match tags to their meanings</li>
-                <li><strong>Query Building:</strong> Practice Overpass syntax</li>
+                <li><strong>Difficulty Levels:</strong> Choose from Easy, Medium, or Hard questions</li>
+                <li><strong>Randomized Questions:</strong> Get 10 random questions from a pool of 45 curated OSM tags</li>
+                <li><strong>Instant Feedback:</strong> Learn with explanations for each answer</li>
               </ul>
-              <p style="margin-top: 1rem; color: #667eea;"><strong>🎯 NEW:</strong> Randomized questions from a pool of 50+ questions powered by real OSM data!</p>
+              <p style="margin-top: 1rem; color: #667eea;"><strong>🎯 </strong> Questions cover common amenities, infrastructure, and specialized OSM features!</p>
             </div>
             
             <h3 class="title is-4">Select Difficulty:</h3>
