--- a/supercharged-overpass/map.html
+++ b/supercharged-overpass/map.html
@@ -8,8 +8,8 @@
     />
     <meta name="viewport" content="width=device-width" />
     <title>overpass turbo - map</title>
-    <script type="module" crossorigin src="./assets/map-DTrBGrZw.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/ide-BYW-mL0F.js">
+    <script type="module" crossorigin src="./assets/map-n5_768uQ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/ide-D7RJfZvU.js">
     <link rel="stylesheet" crossorigin href="./assets/ide-CIGW-MKW.css">
   </head>
   <body>
