--- a/boundingbox/index.html
+++ b/boundingbox/index.html
@@ -156,21 +156,14 @@
         </div>
     </section>
 
-
-    <div id="ocontainer" class="ocontainer" style="display:none;">
-        <textarea rows="25" cols="100" ></textarea>
-        <div id="submit-buttons">
-            <button id="cancel">Cancel</button>
-            <button id="add">Add</button>
-        </div>
-    </div>
-</body>                                                                                                                          
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GTJTE1MMWK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_MEASUREMENT_ID');
+  gtag('config', 'G-GTJTE1MMWK');
 </script>
+</body>
 </html>
