add dark mode, draggability

--- a/boundingbox/index.html
+++ b/boundingbox/index.html
@@ -62,6 +62,9 @@
         <li id="feedback">
             <button type="button" title="Send Feedback" aria-label="Send Feedback"></button>
         </li>
+        <li id="dark-mode">
+            <button type="button" title="Toggle Dark Mode" aria-label="Toggle Dark Mode"></button>
+        </li>
         <li id="help">
             <button type="button" title="Help" aria-label="Help"></button>
         </li>
