--- a/portfolio/2_3/index.html
+++ b/portfolio/2_3/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+<script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
+</head>
 <meta charset="utf-8">
 <title>Untitled</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
