--- a/portfolio/3_1/index.html
+++ b/portfolio/3_1/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+<script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
+</head>
 <meta charset="utf-8">
 
 <script src="http://d3js.org/d3.v4.js"></script>
