--- a/supercharged-overpass/land.html
+++ b/supercharged-overpass/land.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-  <head></head>
+  <head>
+    <script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
+  </head>
   <body>
     <script>
       if (new URLSearchParams(location.search).has("code")) {
