--- a/supercharged-overpass/map.html
+++ b/supercharged-overpass/map.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
     <meta
       http-equiv="content-type"
       content="text/html; charset=utf-8"
