--- a/LookStuffUp_api_guide.html
+++ b/LookStuffUp_api_guide.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LookStuffUp: Google API Guide</title>
