--- a/portfolio/1_2/index.html
+++ b/portfolio/1_2/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
     <style>
         body {
             font-family: Helvetica, Arial, sans-serif;
