--- a/portfolio/3_2/sankey.html
+++ b/portfolio/3_2/sankey.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
     <meta charset="utf-8">
     <title>Sankey Visualization (Parallel sets)</title>
     <script src="//d3js.org/d3.v3.min.js"></script>
