--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
   <title>Privacy Policy - LookStuffUp</title>
   <style>
     body {
