--- a/privacy-policy_repotree.html
+++ b/privacy-policy_repotree.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - GitHub Tree Copier</title>
+    <title>Privacy Policy - RepoTree</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
@@ -34,7 +34,7 @@
     <p class="last-updated">Last Updated: November 7, 2025</p>
 
     <h2>Data Collection</h2>
-    <p>GitHub Tree Copier does not collect, store, or transmit any personal data or user information.</p>
+    <p>RepoTree does not collect, store, or transmit any personal data or user information.</p>
 
     <h2>Data Usage</h2>
     <p>This extension:</p>
