--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,189 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<script src="https://t.contentsquare.net/uxa/873c6699ef385.js"></script>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Vibhor Singh | Data Engineer & Software Developer</title>
+     <meta name="description"
+          content="Portfolio of Vibhor Singh - Data Engineer, Software Developer, and Tech Enthusiast.">
 
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+     <!-- Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=JetBrains+Mono:wght@400;700&display=swap"
+          rel="stylesheet">
 
-<title>My Blog</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
+     <!-- CSS -->
+     <link rel="stylesheet" href="css/style.css">
 
-<!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Lora|Merriweather:300,400" rel="stylesheet">
-
+     <!-- Icons -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
+     <div class="background-grid"></div>
 
-<!-- PRE LOADER -->
-<div class="preloader">
-     <div class="sk-spinner sk-spinner-wordpress">
-          <span class="sk-inner-circle"></span>
-     </div>
-</div>
-
-<!-- Navigation section  -->
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-     <div class="container">
-
-          <div class="navbar-header">
-               <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-               </button>
-               <a href="https://iamvibhorsingh.github.io" class="navbar-brand">Vibhor Singh</a>
-          </div>
-          <div class="collapse navbar-collapse">
-               <ul class="nav navbar-nav navbar-right">
-                    
-                    <li class="active"><a href="#middle">Portfolio</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-               </ul>
-          </div>
-
-  </div>
-</div>
-
-<!-- Home Section -->
-<section id="home" class="main-home parallax-section">
-     <div class="overlay"></div>
-     <div id="particles-js"></div>
-     <div class="container">
-          <div class="row">
-               <div class="col-md-12 col-sm-12">
-                    <h1>Hello! This is my Portfolio. It's still under construction.</h1>
+     <header class="navbar">
+          <div class="container">
+               <a href="#" class="logo">VS<span class="dot">.</span></a>
+               <nav>
+                    <ul class="nav-links">
+                         <li><a href="#projects">Projects</a></li>
+                         <li><a href="#gallery">Gallery</a></li>
+                         <li><a href="#contact">Contact</a></li>
+                    </ul>
+                    <button class="theme-toggle" aria-label="Toggle Dark Mode">
+                         <i class="fas fa-moon"></i>
+                    </button>
+               </nav>
+               <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                </div>
           </div>
-     </div>
-</section>
+     </header>
 
-<!-- Blog Section -->
-<section id="blog">
-     <div class="container">
-          <div class="row">
-               <div id="middle">
-               <div class="col-md-offset-1 col-md-10 col-sm-12">
-                    <div class="blog-post-thumb">
-                         <div class="blog-post-image">
-                              <a href="4_2/index.html">
-                                   <img src="images/whereareyou.png" class="img-responsive" alt="WhereAreYou? Blog Image">
-                              </a>
-                         </div>
-                         <div class="blog-post-title">
-                              <h3><a href="4_2/index.html">Dev Diary: Building "WhereAreYou?"</a></h3>
-                         </div>
-                         <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
-                              <span><i class="fa fa-date"></i> July 18, 2025</span>
-                         </div>
-                         <div class="blog-post-des">
-                              <p>A dev diary about building a simple GeoGuesser-style game with Flask, vanilla JavaScript, and the Google Maps API.</p>
-                              <a href="4_2/index.html" class="btn btn-default">Continue Reading</a>
-                         </div>
+     <main>
+          <section class="hero-section">
+               <div class="container">
+                    <p class="greeting">Hi, my name is</p>
+                    <h1 class="name">Vibhor Singh.</h1>
+                    <h2 class="role">I build things for myself and others on the web.</h2>
+                    <p class="bio-short">I'm a Data Engineer. I also specialize in building exceptional
+                         digital experiences. Currently, I'm focused on accessible, human-centered AI-enabled products.
+                    </p>
+                    <a href="#projects" class="btn btn-primary">Check out my work!</a>
+               </div>
+          </section>
+
+          <section id="projects" class="projects-section">
+               <div class="container">
+                    <h2 class="section-title">Some Things I've Built</h2>
+                    <div class="projects-grid">
+                         <!-- Example Card 1: WhereAreYou? -->
+                         <article class="project-card">
+                              <div class="card-image">
+                                   <i class="fas fa-map-marked-alt card-icon"></i>
+                              </div>
+                              <div class="card-content">
+                                   <div class="card-header">
+                                        <span class="card-tag">Game Dev</span>
+                                        <span class="card-date">July 18, 2025</span>
+                                   </div>
+                                   <h3>WhereAreYou?</h3>
+                                   <p>A GeoGuesser-style game built with Flask and Google Maps API.</p>
+                                   <a href="blog/where-are-you.html" class="card-link">Read More <i
+                                             class="fas fa-arrow-right"></i></a>
+                              </div>
+                         </article>
+
+                         <!-- Example Card 2: LookStuffUp -->
+                         <article class="project-card">
+                              <div class="card-image">
+                                   <i class="fas fa-search card-icon"></i>
+                              </div>
+                              <div class="card-content">
+                                   <div class="card-header">
+                                        <span class="card-tag">Browser Ext</span>
+                                        <span class="card-date">July 10, 2025</span>
+                                   </div>
+                                   <h3>LookStuffUp</h3>
+                                   <p>A deep dive into building a browser extension for on-page lookups.</p>
+                                   <a href="blog/look-stuff-up.html" class="card-link">Read More <i
+                                             class="fas fa-arrow-right"></i></a>
+                              </div>
+                         </article>
+
+                         <!-- Example Card 3: Geospatial Viz -->
+                         <article class="project-card">
+                              <div class="card-image">
+                                   <i class="fas fa-globe-americas card-icon"></i>
+                              </div>
+                              <div class="card-content">
+                                   <div class="card-header">
+                                        <span class="card-tag">Visualization</span>
+                                        <span class="card-date">Mar 4, 2020</span>
+                                   </div>
+                                   <h3>Geospatial Visualizations</h3>
+                                   <p>Exploring spatial data through interactive maps.</p>
+                                   <a href="blog/geospatial-viz.html" class="card-link">Read More <i
+                                             class="fas fa-arrow-right"></i></a>
+                              </div>
+                         </article>
+
+                         <!-- Card 4: Network Viz -->
+                         <article class="project-card">
+                              <div class="card-image">
+                                   <i class="fas fa-project-diagram card-icon"></i>
+                              </div>
+                              <div class="card-content">
+                                   <div class="card-header">
+                                        <span class="card-tag">Visualization</span>
+                                        <span class="card-date">Mar 20, 2020</span>
+                                   </div>
+                                   <h3>Network Visualizations</h3>
+                                   <p>Sankey diagrams showing donation flows.</p>
+                                   <a href="blog/network-viz.html" class="card-link">Read More <i
+                                             class="fas fa-arrow-right"></i></a>
+                              </div>
+                         </article>
+
+                         <!-- Card 5: Temporal Viz -->
+                         <article class="project-card">
+                              <div class="card-image">
+                                   <i class="fas fa-clock card-icon"></i>
+                              </div>
+                              <div class="card-content">
+                                   <div class="card-header">
+                                        <span class="card-tag">Visualization</span>
+                                        <span class="card-date">Apr 10, 2020</span>
+                                   </div>
+                                   <h3>Temporal Visualizations</h3>
+                                   <p>Visualizing changes over time.</p>
+                                   <a href="blog/temporal-viz.html" class="card-link">Read More <i
+                                             class="fas fa-arrow-right"></i></a>
+                              </div>
+                         </article>
                     </div>
+               </div>
+          </section>
 
-                    <div class="blog-post-thumb">
-                         <div class="blog-post-image">
-                              <a href="4_1/index.html">
-                                   <img src="images/lookstuffup.png" class="img-responsive" alt="LookStuffUp Blog Image">
-                              </a>
-                         </div>
-                         <div class="blog-post-title">
-                              <h3><a href="4_1/index.html">Building "LookStuffUp": A Deep Dive</a></h3>
-                         </div>
-                         <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
-                              <span><i class="fa fa-date"></i> July 10, 2025</span>
-                         </div>
-                         <div class="blog-post-des">
-                              <p>A deep dive into the technical decisions and challenges behind building a browser extension for on-page lookups.</p>
-                              <a href="4_1/index.html" class="btn btn-default">Continue Reading</a>
-                         </div>
-                    </div>
-
-                    <div class="blog-post-thumb">
-                         <div class="blog-post-image">
-                              <a href="index.html">
-                                   <img src="1_3.png" class="img-responsive" alt="Blog Image">
-                              </a>
-                         </div>
-                         <div class="blog-post-title">
-                              <h3><a href="1_3\index.html">Geospatial Visualizations</a></h3>
-                         </div>
-                         <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
-                              <span><i class="fa fa-date"></i> March 4, 2020</span>
-                         </div>
-                         <div class="blog-post-des">
-                              <p>Will contain all spatial viz.</p>
-                              <a href="1_3\index.html" class="btn btn-default">Continue Reading</a>
-                         </div>
-                    </div>
-
-                    <div class="blog-post-thumb">
-                         <div class="blog-post-image">
-                              <a href="index.html">
-                                   <img src="3_2 sankey.png" class="img-responsive" alt="Blog Image">
-                              </a>
-                         </div>
-                         <div class="blog-post-title">
-                              <h3><a href="3_2\sankey.html">Network Visualizations</a></h3>
-                         </div>
-                         <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
-                              <span><i class="fa fa-date"></i> March 20, 2020</span>
-                         </div>
-                         <div class="blog-post-des">
-                              <p>Will contain all network related viz.</p>
-                              <a href="3_2\sankey.html" class="btn btn-default">Continue Reading</a>
-                         </div>
-                    </div>
-
-                    <div class="blog-post-thumb">
-                         <div class="blog-post-video">
-                              <div class="embed-responsive embed-responsive-16by9">
-                                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/DHOGVYfggP4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <section id="gallery" class="gallery-section">
+               <div class="container">
+                    <h2 class="section-title">Gallery</h2>
+                    <p class="section-subtitle">A glimpse of NYC through my lens.</p>
+                    <div class="gallery-preview">
+                         <div class="gallery-grid">
+                              <div class="gallery-item">
+                                   <img src="images/1.jpg" alt="Gallery Image 1" loading="lazy">
+                              </div>
+                              <div class="gallery-item">
+                                   <img src="images/2.jpg" alt="Gallery Image 2" loading="lazy">
+                              </div>
+                              <div class="gallery-item">
+                                   <img src="images/3.jpg" alt="Gallery Image 3" loading="lazy">
+                              </div>
+                              <div class="gallery-item">
+                                   <img src="images/4.jpg" alt="Gallery Image 4" loading="lazy">
                               </div>
                          </div>
-                         <div class="blog-post-title">
-                              <h3><a href="2_3\index.html">Temporal Visualizations</a></h3>
-                         </div>
-                         <div class="blog-post-format">
-                              <span><a href="#"><img src="images/author.jpeg" class="img-responsive img-circle"> Vibhor Singh</a></span>
-                              <span><i class="fa fa-date"></i> April 10, 2020</span>
-                         </div>
-                         <div class="blog-post-des">
-                              <p>Will contain all time related viz. The animation is currently broken due to 
-                              some functions being outdated due to the newer version of d3. Refer to video
-                              to see how it works.</p>
-                              <a href="2_3\index.html" class="btn btn-default">Continue Reading</a>
-                         </div>
                     </div>
+                    <div class="center-btn">
+                         <a href="gallery.html" class="btn btn-outline">View Full Gallery</a>
                     </div>
                </div>
+          </section>
+
+          <section id="contact" class="contact-section">
+               <div class="container">
+                    <h2 class="section-title">Get In Touch</h2>
+                    <p>Interested in collaborating or just want to say hi?</p>
+                    <div class="social-links">
+                         <a href="https://github.com/iamvibhorsingh" target="_blank" aria-label="GitHub"><i
+                                   class="fab fa-github"></i></a>
+                         <a href="https://linkedin.com/in/vibhorsingh" target="_blank" aria-label="LinkedIn"><i
+                                   class="fab fa-linkedin"></i></a>
+                         <a href="mailto:vibhor.singh@example.com" aria-label="Email"><i
+                                   class="fas fa-envelope"></i></a>
+                    </div>
+                    <p class="copyright">&copy; 2025 Vibhor Singh. Built with <i class="fas fa-code"></i> and <i
+                              class="fas fa-coffee"></i>.</p>
                </div>
-          </div>
-     </div>
-</section>
-<!-- Back top -->
-<a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
+          </section>
+     </main>
 
-<!-- SCRIPTS -->
-
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/particles.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/jquery.parallax.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/custom.js"></script>
-
+     <script src="js/main.js"></script>
 </body>
+
 </html>
